# USB_to_PS2_pico

./: .gitmodules  CMakeLists.txt  README.md  USB_to_ps2_arrays.h  arrayGenerator.py  main.c  usb_to_ps2.ods
USB_driver_wrapper/: CMakeLists.txt  hid_app.c  hid_keyboard.c  hid_keyboard.h  hid_mouse.c  hid_mouse.h
